--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@kamino-finance/klend-sdk": "^7.0.6",
+    "@mrgnlabs/marginfi-client-v2": "^1.0.0",
+    "@mrgnlabs/mrgn-common": "^1.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -35,9 +38,6 @@
     "@solana-mobile/wallet-adapter-mobile": "^2.2.2",
     "@solana/spl-token": "^0.3.8",
     "@solana/web3.js": "^1.78.4",
-    "@kamino-finance/klend-sdk": "^7.0.6",
-    "@mrgnlabs/marginfi-client-v2": "^1.0.0",
-    "@mrgnlabs/mrgn-common": "^1.0.0",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
     "bs58": "^5.0.0",
@@ -47,19 +47,22 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.9.1",
+    "react-native-permissions": "^3.10.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
     "victory-native": "^36.6.11",
-    "react-native-linear-gradient": "^2.8.2",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-permissions": "^3.10.1"
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -68,7 +71,6 @@
     "@testing-library/react-native": "^12.1.3",
     "@types/jest": "^29.5.4",
     "@types/react": "~18.0.14",
-    "@types/react-native": "^0.72.2",
     "babel-jest": "^29.6.2",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
@@ -81,7 +83,9 @@
   "private": true,
   "jest": {
     "preset": "jest-expo",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
