--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "ota:setup": "node scripts/ota-update.js demo-setup"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@kamino-finance/klend-sdk": "^7.0.6",
     "@mrgnlabs/marginfi-client-v2": "^1.0.0",
     "@mrgnlabs/mrgn-common": "^1.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -41,44 +41,44 @@
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
     "bs58": "^5.0.0",
-    "expo": "~48.0.18",
-    "expo-crypto": "~12.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
-    "react": "18.2.0",
-    "react-native": "0.71.14",
+    "expo": "^53.0.0",
+    "expo-crypto": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "^3.10.1",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.1.6",
     "victory-native": "^36.6.11",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "expo-splash-screen": "~0.18.2"
+    "react-native-web": "^0.20.0",
+    "react-dom": "19.0.0",
+    "expo-splash-screen": "~0.30.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.1.3",
     "@types/jest": "^29.5.4",
-    "@types/react": "~18.0.14",
+    "@types/react": "~19.0.10",
     "babel-jest": "^29.6.2",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-native": "^4.0.0",
-    "jest": "^29.2.1",
-    "jest-expo": "^49.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "^53.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "~5.8.3"
   },
   "private": true,
   "jest": {
