--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@kamino-finance/klend-sdk": "^7.0.6",
+    "@mrgnlabs/marginfi-client-v2": "^1.0.0",
+    "@mrgnlabs/mrgn-common": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
