--- a/package.json
+++ b/package.json
@@ -4,73 +4,67 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "build:android": "eas build -p android",
-    "build:android-dev": "eas build -p android --profile development",
-    "build:android-preview": "eas build -p android --profile preview",
-    "build:android-prod": "eas build -p android --profile production",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "type-check": "tsc --noEmit",
-    "prebuild": "npm run lint && npm run test:ci",
+    "test:ci": "jest --ci",
+    "build:android-dev": "npx eas build --profile development --platform android",
+    "build:android-preview": "npx eas build --profile preview --platform android",
+    "build:android-prod": "npx eas build --profile production --platform android",
     "ota:build": "node scripts/ota-update.js build-preview",
-    "ota:update": "node scripts/ota-update.js publish-update",
+    "ota:publish": "node scripts/ota-update.js publish-update",
     "ota:setup": "node scripts/ota-update.js demo-setup"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.3",
     "@kamino-finance/klend-sdk": "^7.0.6",
     "@mrgnlabs/marginfi-client-v2": "^1.0.0",
     "@mrgnlabs/mrgn-common": "^1.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.0.1",
-    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.0.1",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.2",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.2",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.2",
-    "@solana/spl-token": "^0.3.8",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.78.4",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
-    "bs58": "^5.0.0",
-    "expo": "~53.0.0",
-    "expo-crypto": "~12.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "expo": "~53.0.20",
+    "expo-crypto": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "react": "19.0.0",
-    "react-native": "0.73.6",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "^3.10.1",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.1.6",
-    "victory-native": "^36.6.11",
-    "react-native-web": "~0.19.10",
-    "react-dom": "19.0.0"
+    "react-native-web": "^0.20.0",
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.1.3",
     "@types/jest": "^29.5.4",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "babel-jest": "^29.6.2",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
@@ -78,37 +72,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~53.0.0",
     "react-test-renderer": "19.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "~5.8.3"
   },
-  "private": true,
-  "jest": {
-    "preset": "jest-expo",
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.js"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts",
-      "!src/**/*.stories.{js,jsx,ts,tsx}",
-      "!src/**/*.test.{js,jsx,ts,tsx}",
-      "!src/**/*.spec.{js,jsx,ts,tsx}"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 70,
-        "functions": 70,
-        "lines": 70,
-        "statements": 70
-      }
-    },
-    "testMatch": [
-      "**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "**/?(*.)+(spec|test).{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "node",
-    "testTimeout": 10000
-  }
+  "private": true
 }
