--- a/eas.json
+++ b/eas.json
@@ -11,11 +11,7 @@
       },
       "channel": "demo",
       "android": {
-        "buildType": "apk",
-        "newArchEnabled": false
-      },
-      "ios": {
-        "newArchEnabled": false
+        "buildType": "apk"
       }
     },
     "preview": {
@@ -25,11 +21,7 @@
       },
       "channel": "demo",
       "android": {
-        "buildType": "apk",
-        "newArchEnabled": false
-      },
-      "ios": {
-        "newArchEnabled": false
+        "buildType": "apk"
       }
     },
     "production": {
@@ -37,11 +29,7 @@
         "EXPO_PUBLIC_API_URL": "https://api.incrypt.network"
       },
       "android": {
-        "buildType": "app-bundle",
-        "newArchEnabled": false
-      },
-      "ios": {
-        "newArchEnabled": false
+        "buildType": "app-bundle"
       }
     }
   },
