--- a/package.json
+++ b/package.json
@@ -38,16 +38,19 @@
     "buffer": "^6.0.3",
     "expo": "~53.0.20",
     "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-linking": "~7.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
+    "openai": "^5.12.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "^3.10.1",
     "react-native-qrcode-scanner": "^1.5.5",
@@ -57,8 +60,7 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "^0.20.0",
-    "victory-native": "^36.6.11",
-    "expo-dev-client": "~5.2.4"
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
