--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "^0.20.0",
-    "victory-native": "^36.6.11"
+    "victory-native": "^36.6.11",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
