--- a/eas.json
+++ b/eas.json
@@ -16,11 +16,20 @@
     "preview": {
       "extends": "base",
       "distribution": "internal",
-      "channel": "demo"
+      "channel": "demo",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
       "extends": "base",
       "autoIncrement": true
+    },
+    "production-apk": {
+      "extends": "base",
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
